--- a/ui/index.html
+++ b/ui/index.html
@@ -85,7 +85,7 @@
                 <div class="form-container">
                     <div class="form-group">
                         <label>Item Name</label>
-                        <input type="text" id="orderItemName" class="form-input" placeholder="Enter item name">
+                        <input type="text" id="orderItemName" class="form-input" placeholder="Enter item name (e.g., Bread, Water, etc.)">
                     </div>
                     <div class="form-group">
                         <label>Quantity</label>
