Final touches for initial release

--- a/ui/index.html
+++ b/ui/index.html
@@ -124,6 +124,18 @@
         <div class="notification-container" id="notificationContainer"></div>
     </div>
 
+    <!-- Confirmation Dialog -->
+    <div id="confirmDialog" class="confirm-dialog hidden">
+        <div class="confirm-dialog-content">
+            <h3 class="confirm-dialog-title" id="confirmDialogTitle">Confirm Action</h3>
+            <p class="confirm-dialog-message" id="confirmDialogMessage">Are you sure you want to proceed?</p>
+            <div class="confirm-dialog-buttons">
+                <button class="confirm-btn confirm-yes" id="confirmYes">Yes</button>
+                <button class="confirm-btn confirm-no" id="confirmNo">No</button>
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
